--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,8 @@ bind-key - delete-buffer
 
 # Screen-like key bindings
 
+# Go to begining of line with Ctr + a a
+bind-key a send-prefix
 # new window
 bind-key c new-window
 
