--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,7 @@
     unstage = reset HEAD --
     l = log --decorate --stat
     graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
+[push]
+    default = simple
+[diff]
+	tool = vimdiff
