--- a/.rootrc
+++ b/.rootrc
@@ -7,3 +7,5 @@
 # This is suggested by CMS PUB committee, but is included in system.rootrc as of ROOT 5.34
 # See https://ghm.web.cern.ch/ghm/plots/
 # Unix.*.Root.UseTTFonts: true
+#
+OpenGL.Framebuffer.Multisample: 4
